k8s/Raw/gateway-api.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: gateway-api-deployment
  namespace: fitness-app
  labels:
    app: gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:      
      containers:
      - name: gateway-api
        image: fitnessappacc/fitness-app-gateway-api:latest
      imagePullSecrets:
      - name: fitness-docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
  namespace: fitness-app
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 20000
