k8s/Raw/identity-api.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: identity-api-deployment
  namespace: fitness-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:      
      containers:
      - name: identity-api
        image: fitnessappacc/fitness-app-identity-api:latest
      imagePullSecrets:
      - name: fitness-docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  namespace: fitness-app
spec:
  selector:
    app: identity-api
  ports:
    - name: backend
      protocol: TCP
      port: 5000
