k8s/Raw/settings-api.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: settings-api-deployment
  namespace: fitness-app
  labels:
    app: settings-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: settings-api
  template:
    metadata:
      labels:
        app: settings-api
    spec:      
      containers:
      - name: settings-api
        image: fitnessappacc/fitness-app-settings-api:latest
      imagePullSecrets:
      - name: fitness-docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: settings-api-service
  namespace: fitness-app
spec:
  selector:
    app: settings-api
  ports:
    - name: backend
      protocol: TCP
      port: 8000
